--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Este Aplicativo foi desenvolvido na semana Spring React"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>DSVendas</title>
-  </head>
-  <body>
-    <noscript>Você precisa habilitar o JS para rodar este Aplicativo</noscript>
-    <div id="root"></div>
-  
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Este Aplicativo foi desenvolvido na semana Spring React" />
+
+  <title>DSVendas</title>
+</head>
+
+<body>
+  <noscript>Você precisa habilitar o JS para rodar este Aplicativo</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
